// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FonjepCli parse() should add FonjepApplicationFlat 1`] = `
[
  {
    "_id": Any<String>,
    "allocatorId": "20000000000001",
    "allocatorIdType": "siret",
    "allocatorName": "Ministère des sports, de la jeunesse et de la vie associative",
    "applicationId": "fonjep-J10540-2015-12-31",
    "applicationProviderId": "J10540-2015-12-31",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000000",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000000001",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2017,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2015-12-31T00:00:00.000Z,
    "decisionDate": null,
    "decisionReference": null,
    "depositDate": null,
    "ej": "N/A",
    "grantedAmount": 6666,
    "idRAE": null,
    "instructiveDepartementId": "30000000000001",
    "instructiveDepartmentIdType": "siret",
    "instructiveDepartmentName": "SDJES D'ILLE-ET-VILAINE",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": null,
    "managingAuthorityName": "FONJEP",
    "nature": "Aide en numéraire",
    "object": null,
    "paymentCondition": "PHASED",
    "paymentConditionDesc": null,
    "paymentId": "J10540-2015-12-31-2017-10000000000001",
    "paymentPeriodDates": null,
    "pluriannual": true,
    "pluriannualYears": null,
    "provider": "fonjep",
    "requestYear": null,
    "requestedAmount": 6666,
    "scheme": "FONJEP Jeunesse éducation populaire",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": null,
    "totalAmount": 6666,
    "ueNotification": null,
    "uniqueId": "fonjep-J10540-2015-12-31-2017",
    "updateDate": Any<Date>,
  },
  {
    "_id": Any<String>,
    "allocatorId": "20000000000001",
    "allocatorIdType": "siret",
    "allocatorName": "Ministère des sports, de la jeunesse et de la vie associative",
    "applicationId": "fonjep-J02924-2021-12-31",
    "applicationProviderId": "J02924-2021-12-31",
    "beneficiaryCompanyId": Siren {
      "identifier": "110000000",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "11000000000001",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2022,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2021-12-31T00:00:00.000Z,
    "decisionDate": null,
    "decisionReference": null,
    "depositDate": null,
    "ej": "N/A",
    "grantedAmount": 7164,
    "idRAE": null,
    "instructiveDepartementId": "30000000000001",
    "instructiveDepartmentIdType": "siret",
    "instructiveDepartmentName": "SDJES D'ILLE-ET-VILAINE",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": null,
    "managingAuthorityName": "FONJEP",
    "nature": "Aide en numéraire",
    "object": null,
    "paymentCondition": "PHASED",
    "paymentConditionDesc": null,
    "paymentId": "J02924-2021-12-31-2022-11000000000001",
    "paymentPeriodDates": null,
    "pluriannual": true,
    "pluriannualYears": null,
    "provider": "fonjep",
    "requestYear": null,
    "requestedAmount": 7164,
    "scheme": "FONJEP Jeunesse éducation populaire",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": null,
    "totalAmount": 7164,
    "ueNotification": null,
    "uniqueId": "fonjep-J02924-2021-12-31-2022",
    "updateDate": Any<Date>,
  },
  {
    "_id": Any<String>,
    "allocatorId": "20000000000001",
    "allocatorIdType": "siret",
    "allocatorName": "Ministère des sports, de la jeunesse et de la vie associative",
    "applicationId": "fonjep-J23425-2011-12-31",
    "applicationProviderId": "J23425-2011-12-31",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000000",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000000001",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2022,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2011-12-31T00:00:00.000Z,
    "decisionDate": null,
    "decisionReference": null,
    "depositDate": null,
    "ej": "N/A",
    "grantedAmount": 7518,
    "idRAE": null,
    "instructiveDepartementId": "30000000000001",
    "instructiveDepartmentIdType": "siret",
    "instructiveDepartmentName": "SDJES D'ILLE-ET-VILAINE",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": null,
    "managingAuthorityName": "FONJEP",
    "nature": "Aide en numéraire",
    "object": null,
    "paymentCondition": "PHASED",
    "paymentConditionDesc": null,
    "paymentId": "J23425-2011-12-31-2022-10000000000001",
    "paymentPeriodDates": null,
    "pluriannual": true,
    "pluriannualYears": null,
    "provider": "fonjep",
    "requestYear": null,
    "requestedAmount": 7518,
    "scheme": "FONJEP Jeunesse éducation populaire",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": null,
    "totalAmount": 7518,
    "ueNotification": null,
    "uniqueId": "fonjep-J23425-2011-12-31-2022",
    "updateDate": Any<Date>,
  },
]
`;

exports[`FonjepCli parse() should add FonjepPaymentFlat 1`] = `
[
  {
    "_id": Any<String>,
    "actionCode": "N/A",
    "actionLabel": "N/A",
    "activityCode": "N/A",
    "activityLabel": "N/A",
    "amount": 1777,
    "attachementComptable": "N/A",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000000",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000000001",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "centreFinancierCode": "N/A",
    "centreFinancierLibelle": "N/A",
    "ej": "N/A",
    "exerciceBudgetaire": 2017,
    "idVersement": "J10540-2015-12-31-2017-10000000000001",
    "ministry": "nom_ministere_1",
    "ministryAcronym": "sigle_ministere_1",
    "mission": "mission_1",
    "operationDate": 2017-01-26T00:00:00.000Z,
    "programName": "programme_1",
    "programNumber": 163,
    "provider": "fonjep",
    "regionAttachementComptable": "N/A",
    "uniqueId": "fonjep-J10540-2015-12-31-2017-10000000000001-163-N/A-N/A-2017-01-01-N/A-N/A",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<String>,
    "actionCode": "N/A",
    "actionLabel": "N/A",
    "activityCode": "N/A",
    "activityLabel": "N/A",
    "amount": 1777,
    "attachementComptable": "N/A",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000000",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000000001",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "centreFinancierCode": "N/A",
    "centreFinancierLibelle": "N/A",
    "ej": "N/A",
    "exerciceBudgetaire": 2017,
    "idVersement": "J10540-2015-12-31-2017-10000000000001",
    "ministry": "nom_ministere_1",
    "ministryAcronym": "sigle_ministere_1",
    "mission": "mission_1",
    "operationDate": 2017-04-27T00:00:00.000Z,
    "programName": "programme_1",
    "programNumber": 163,
    "provider": "fonjep",
    "regionAttachementComptable": "N/A",
    "uniqueId": "fonjep-J10540-2015-12-31-2017-10000000000001-163-N/A-N/A-2017-04-01-N/A-N/A",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<String>,
    "actionCode": "N/A",
    "actionLabel": "N/A",
    "activityCode": "N/A",
    "activityLabel": "N/A",
    "amount": 1777,
    "attachementComptable": "N/A",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000000",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000000001",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "centreFinancierCode": "N/A",
    "centreFinancierLibelle": "N/A",
    "ej": "N/A",
    "exerciceBudgetaire": 2017,
    "idVersement": "J10540-2015-12-31-2017-10000000000001",
    "ministry": "nom_ministere_1",
    "ministryAcronym": "sigle_ministere_1",
    "mission": "mission_1",
    "operationDate": 2017-07-11T00:00:00.000Z,
    "programName": "programme_1",
    "programNumber": 163,
    "provider": "fonjep",
    "regionAttachementComptable": "N/A",
    "uniqueId": "fonjep-J10540-2015-12-31-2017-10000000000001-163-N/A-N/A-2017-07-01-N/A-N/A",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<String>,
    "actionCode": "N/A",
    "actionLabel": "N/A",
    "activityCode": "N/A",
    "activityLabel": "N/A",
    "amount": 1776,
    "attachementComptable": "N/A",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000000",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000000001",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "centreFinancierCode": "N/A",
    "centreFinancierLibelle": "N/A",
    "ej": "N/A",
    "exerciceBudgetaire": 2017,
    "idVersement": "J10540-2015-12-31-2017-10000000000001",
    "ministry": "nom_ministere_1",
    "ministryAcronym": "sigle_ministere_1",
    "mission": "mission_1",
    "operationDate": 2017-10-19T00:00:00.000Z,
    "programName": "programme_1",
    "programNumber": 163,
    "provider": "fonjep",
    "regionAttachementComptable": "N/A",
    "uniqueId": "fonjep-J10540-2015-12-31-2017-10000000000001-163-N/A-N/A-2017-10-01-N/A-N/A",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
]
`;

exports[`FonjepCli parse() should create or remplace TypePoste collection 1`] = `
[
  {
    "_id": Any<ObjectId>,
    "code": "DOUBLE",
    "libelle": "UNITE DE COMPTE DOUBLEE",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "code": "FONJEP",
    "libelle": "Poste FONJEP",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "code": "PSTEMP",
    "libelle": "POSTES EMPOI FONJEP (100 %)",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "code": "FONBIS",
    "libelle": "PROLONGATION PAS DE FRAIS",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
]
`;

exports[`FonjepCli parse() should create or replace Dispositif collection 1`] = `
[
  {
    "_id": Any<ObjectId>,
    "financeurCode": "10004",
    "id": 1,
    "libelle": "FONJEP Jeunesse éducation populaire",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "financeurCode": "10005",
    "id": 2,
    "libelle": "FONJEP Cohésion sociale",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "financeurCode": "10008",
    "id": 3,
    "libelle": "FONJEP Politique de la ville",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "financeurCode": "10009",
    "id": 4,
    "libelle": "FONJEP Guid'Asso",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "financeurCode": "10010",
    "id": 5,
    "libelle": "FONJEP Éducation à la citoyenneté et à la solidarité internationale (ECSI)",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "financeurCode": "10012",
    "id": 6,
    "libelle": "FONJEP Culture",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "financeurCode": "10016",
    "id": 7,
    "libelle": "FONJEP Centre de ressources et d'information des bénévoles",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "financeurCode": "10017",
    "id": 8,
    "libelle": "FONJEP Jeunes",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
]
`;

exports[`FonjepCli parse() should create or replace Poste collection 1`] = `
[
  {
    "_id": Any<ObjectId>,
    "annee": 2017,
    "associationBeneficiaireCode": "D561",
    "associationImplantationCode": "D561",
    "code": "J10540",
    "dateFinTriennalite": 2018-12-31T00:00:00.000Z,
    "dispositifId": "1",
    "doublementUniteCompte": "Non",
    "financeurAttributeurCode": "78DDJ",
    "financeurPrincipalCode": "10004",
    "montantSubvention": 6666,
    "pleinTemps": "Oui",
    "pstRaisonStatutLibelle": "Reconduction",
    "pstStatutPosteLibelle": "Attribué",
    "pstTypePosteCode": "FONJEP",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "annee": 2022,
    "associationBeneficiaireCode": "L650",
    "associationImplantationCode": "L650",
    "code": "J02924",
    "dateFinTriennalite": 2024-12-31T00:00:00.000Z,
    "dispositifId": 3,
    "doublementUniteCompte": "Non",
    "financeurAttributeurCode": "78DDJ",
    "financeurPrincipalCode": "10004",
    "montantSubvention": 7164,
    "pleinTemps": "Oui",
    "pstRaisonStatutLibelle": "Création",
    "pstStatutPosteLibelle": "Attribué",
    "pstTypePosteCode": "FONJEP",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "annee": 2022,
    "associationBeneficiaireCode": "D561",
    "associationImplantationCode": "D561",
    "code": "J23425",
    "dateFinTriennalite": 2014-12-31T00:00:00.000Z,
    "dispositifId": 2,
    "doublementUniteCompte": "Non",
    "financeurAttributeurCode": "78DDJ",
    "financeurPrincipalCode": "10004",
    "montantSubvention": 5142,
    "pleinTemps": "Oui",
    "pstRaisonStatutLibelle": "Création",
    "pstStatutPosteLibelle": "Attribué",
    "pstTypePosteCode": "FONJEP",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "annee": 2022,
    "associationBeneficiaireCode": "D561",
    "associationImplantationCode": "D561",
    "code": "J23425",
    "dateFinTriennalite": 2014-12-31T00:00:00.000Z,
    "dispositifId": 2,
    "doublementUniteCompte": "Non",
    "financeurAttributeurCode": "78DDJ",
    "financeurPrincipalCode": "10004",
    "montantSubvention": 2376,
    "pleinTemps": "Oui",
    "pstRaisonStatutLibelle": "Poste prolongé sur la même année",
    "pstStatutPosteLibelle": "Fermé",
    "pstTypePosteCode": "FONJEP",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
]
`;

exports[`FonjepCli parse() should create or replace Tiers collection 1`] = `
[
  {
    "_id": Any<ObjectId>,
    "code": "D561",
    "codePostal": "35700",
    "contactEmail": "john.doe@asso1.fr",
    "estAssociation": "Oui",
    "estCoFinanceurPostes": "Non",
    "estFinanceurPostes": "Non",
    "raisonSociale": "ASSOCIATION 1",
    "siretOuRidet": "10000000000001",
    "updateDate": 2022-03-03T00:00:00.000Z,
    "ville": "Rennes",
  },
  {
    "_id": Any<ObjectId>,
    "code": "10004",
    "codePostal": "75000",
    "contactEmail": "mirabelle.prune@jeunesse-asso.fr",
    "estAssociation": "Non",
    "estCoFinanceurPostes": "Non",
    "estFinanceurPostes": "Oui",
    "raisonSociale": "Ministère des sports, de la jeunesse et de la vie associative",
    "siretOuRidet": "20000000000001",
    "updateDate": 2022-03-03T00:00:00.000Z,
    "ville": "Paris",
  },
  {
    "_id": Any<ObjectId>,
    "code": "78DDJ",
    "codePostal": "35000",
    "contactEmail": "sdjes35@ac-rennes.fr",
    "estAssociation": "Non",
    "estCoFinanceurPostes": "Non",
    "estFinanceurPostes": "Oui",
    "raisonSociale": "SDJES D'ILLE-ET-VILAINE",
    "siretOuRidet": "30000000000001",
    "updateDate": 2022-03-03T00:00:00.000Z,
    "ville": "Rennes",
  },
  {
    "_id": Any<ObjectId>,
    "code": "L650",
    "codePostal": "53000",
    "contactEmail": "jane.doe@asso2.fr",
    "estAssociation": "Oui",
    "estCoFinanceurPostes": "Non",
    "estFinanceurPostes": "Non",
    "raisonSociale": "ASSOCIATION 2",
    "siretOuRidet": "11000000000001",
    "updateDate": 2022-03-03T00:00:00.000Z,
    "ville": "Laval",
  },
]
`;

exports[`FonjepCli parse() should create or replace Versement collection 1`] = `
[
  {
    "_id": Any<ObjectId>,
    "dateVersement": 2017-01-26T00:00:00.000Z,
    "montantAPayer": 1777,
    "montantPaye": 1777,
    "periodeDebut": 2017-01-01T00:00:00.000Z,
    "periodeFin": 2017-03-31T00:00:00.000Z,
    "posteCode": "J10540",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "dateVersement": 2017-04-27T00:00:00.000Z,
    "montantAPayer": 1777,
    "montantPaye": 1777,
    "periodeDebut": 2017-04-01T00:00:00.000Z,
    "periodeFin": 2017-06-30T00:00:00.000Z,
    "posteCode": "J10540",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "dateVersement": 2017-07-11T00:00:00.000Z,
    "montantAPayer": 1777,
    "montantPaye": 1777,
    "periodeDebut": 2017-07-01T00:00:00.000Z,
    "periodeFin": 2017-09-30T00:00:00.000Z,
    "posteCode": "J10540",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "dateVersement": 2017-10-19T00:00:00.000Z,
    "montantAPayer": 1776,
    "montantPaye": 1776,
    "periodeDebut": 2017-10-01T00:00:00.000Z,
    "periodeFin": 2017-12-31T00:00:00.000Z,
    "posteCode": "J10540",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "dateVersement": 2017-01-26T00:00:00.000Z,
    "montantAPayer": 1777,
    "montantPaye": 1777,
    "periodeDebut": 2017-01-01T00:00:00.000Z,
    "periodeFin": 2017-03-31T00:00:00.000Z,
    "posteCode": "J23425",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "dateVersement": 2017-04-27T00:00:00.000Z,
    "montantAPayer": 1777,
    "montantPaye": 1777,
    "periodeDebut": 2017-04-01T00:00:00.000Z,
    "periodeFin": 2017-06-30T00:00:00.000Z,
    "posteCode": "J23425",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "dateVersement": 2017-07-11T00:00:00.000Z,
    "montantAPayer": 1777,
    "montantPaye": 1777,
    "periodeDebut": 2017-07-01T00:00:00.000Z,
    "periodeFin": 2017-09-30T00:00:00.000Z,
    "posteCode": "J23425",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "dateVersement": 2018-09-06T00:00:00.000Z,
    "montantAPayer": 1776,
    "montantPaye": 1776,
    "periodeDebut": 2017-10-01T00:00:00.000Z,
    "periodeFin": 2017-12-31T00:00:00.000Z,
    "posteCode": "J23425",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "dateVersement": 2017-01-26T00:00:00.000Z,
    "montantAPayer": 1791,
    "montantPaye": 1791,
    "periodeDebut": 2017-01-01T00:00:00.000Z,
    "periodeFin": 2017-03-31T00:00:00.000Z,
    "posteCode": "J02924",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "dateVersement": 2017-04-27T00:00:00.000Z,
    "montantAPayer": 1791,
    "montantPaye": 1791,
    "periodeDebut": 2017-04-01T00:00:00.000Z,
    "periodeFin": 2017-06-30T00:00:00.000Z,
    "posteCode": "J02924",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "dateVersement": 2017-07-11T00:00:00.000Z,
    "montantAPayer": 1791,
    "montantPaye": 1791,
    "periodeDebut": 2017-07-01T00:00:00.000Z,
    "periodeFin": 2017-09-30T00:00:00.000Z,
    "posteCode": "J02924",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
  {
    "_id": Any<ObjectId>,
    "dateVersement": 2017-10-19T00:00:00.000Z,
    "montantAPayer": 1791,
    "montantPaye": 1791,
    "periodeDebut": 2017-10-01T00:00:00.000Z,
    "periodeFin": 2017-12-31T00:00:00.000Z,
    "posteCode": "J02924",
    "updateDate": 2022-03-03T00:00:00.000Z,
  },
]
`;

exports[`FonjepCli parse() test with all information arround one code poste adds applications flat 1`] = `
[
  {
    "allocatorId": null,
    "allocatorIdType": null,
    "allocatorName": "Ministère des Solidarités  et de la Santé (D.G.C.S.)",
    "applicationId": "fonjep-S05543-2022-12-31",
    "applicationProviderId": "S05543-2022-12-31",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000001",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000100018",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2023,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2022-12-31T00:00:00.000Z,
    "decisionDate": null,
    "decisionReference": null,
    "depositDate": null,
    "ej": "N/A",
    "grantedAmount": 3582,
    "idRAE": null,
    "instructiveDepartementId": null,
    "instructiveDepartmentIdType": null,
    "instructiveDepartmentName": "DRAJES ILE-DE-FRANCE",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": null,
    "managingAuthorityName": "FONJEP",
    "nature": "Aide en numéraire",
    "object": null,
    "paymentCondition": "PHASED",
    "paymentConditionDesc": null,
    "paymentId": "S05543-2022-12-31-2023-10000000100018",
    "paymentPeriodDates": null,
    "pluriannual": true,
    "pluriannualYears": null,
    "provider": "fonjep",
    "requestYear": null,
    "requestedAmount": 3582,
    "scheme": "FONJEP Cohésion sociale",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": null,
    "totalAmount": 3582,
    "ueNotification": null,
    "uniqueId": "fonjep-S05543-2022-12-31-2023",
    "updateDate": 2025-09-30T00:00:00.000Z,
  },
  {
    "allocatorId": null,
    "allocatorIdType": null,
    "allocatorName": "Ministère des Solidarités  et de la Santé (D.G.C.S.)",
    "applicationId": "fonjep-S05543-2022-12-31",
    "applicationProviderId": "S05543-2022-12-31",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000001",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000100018",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2024,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2022-12-31T00:00:00.000Z,
    "decisionDate": null,
    "decisionReference": null,
    "depositDate": null,
    "ej": "N/A",
    "grantedAmount": 3582,
    "idRAE": null,
    "instructiveDepartementId": null,
    "instructiveDepartmentIdType": null,
    "instructiveDepartmentName": "DRAJES ILE-DE-FRANCE",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": null,
    "managingAuthorityName": "FONJEP",
    "nature": "Aide en numéraire",
    "object": null,
    "paymentCondition": "PHASED",
    "paymentConditionDesc": null,
    "paymentId": "S05543-2022-12-31-2024-10000000100018",
    "paymentPeriodDates": null,
    "pluriannual": true,
    "pluriannualYears": null,
    "provider": "fonjep",
    "requestYear": null,
    "requestedAmount": 3582,
    "scheme": "FONJEP Cohésion sociale",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": null,
    "totalAmount": 3582,
    "ueNotification": null,
    "uniqueId": "fonjep-S05543-2022-12-31-2024",
    "updateDate": 2025-09-30T00:00:00.000Z,
  },
  {
    "allocatorId": null,
    "allocatorIdType": null,
    "allocatorName": "Ministère des Solidarités  et de la Santé (D.G.C.S.)",
    "applicationId": "fonjep-S05543-2022-12-31",
    "applicationProviderId": "S05543-2022-12-31",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000001",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000100018",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2025,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2022-12-31T00:00:00.000Z,
    "decisionDate": null,
    "decisionReference": null,
    "depositDate": null,
    "ej": "N/A",
    "grantedAmount": 3582,
    "idRAE": null,
    "instructiveDepartementId": null,
    "instructiveDepartmentIdType": null,
    "instructiveDepartmentName": "DRAJES ILE-DE-FRANCE",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": null,
    "managingAuthorityName": "FONJEP",
    "nature": "Aide en numéraire",
    "object": null,
    "paymentCondition": "PHASED",
    "paymentConditionDesc": null,
    "paymentId": "S05543-2022-12-31-2025-10000000100018",
    "paymentPeriodDates": null,
    "pluriannual": true,
    "pluriannualYears": null,
    "provider": "fonjep",
    "requestYear": null,
    "requestedAmount": 3582,
    "scheme": "FONJEP Cohésion sociale",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": null,
    "totalAmount": 3582,
    "ueNotification": null,
    "uniqueId": "fonjep-S05543-2022-12-31-2025",
    "updateDate": 2025-09-30T00:00:00.000Z,
  },
]
`;

exports[`FonjepCli parse() test with all information arround one code poste adds payments flat 1`] = `
[
  {
    "actionCode": "N/A",
    "actionLabel": "N/A",
    "activityCode": "N/A",
    "activityLabel": "N/A",
    "amount": 888,
    "attachementComptable": "N/A",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000001",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000100018",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "centreFinancierCode": "N/A",
    "centreFinancierLibelle": "N/A",
    "ej": "N/A",
    "exerciceBudgetaire": 2023,
    "idVersement": "S05543-2022-12-31-2023-10000000100018",
    "ministry": "nom_ministere_1",
    "ministryAcronym": "sigle_ministere_1",
    "mission": "mission_1",
    "operationDate": 2023-11-13T00:00:00.000Z,
    "programName": "programme_1",
    "programNumber": 163,
    "provider": "fonjep",
    "regionAttachementComptable": "N/A",
    "uniqueId": "fonjep-S05543-2022-12-31-2023-10000000100018-163-N/A-N/A-2023-01-01-N/A-N/A",
    "updateDate": 2025-09-30T00:00:00.000Z,
  },
  {
    "actionCode": "N/A",
    "actionLabel": "N/A",
    "activityCode": "N/A",
    "activityLabel": "N/A",
    "amount": 888,
    "attachementComptable": "N/A",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000001",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000100018",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "centreFinancierCode": "N/A",
    "centreFinancierLibelle": "N/A",
    "ej": "N/A",
    "exerciceBudgetaire": 2023,
    "idVersement": "S05543-2022-12-31-2023-10000000100018",
    "ministry": "nom_ministere_1",
    "ministryAcronym": "sigle_ministere_1",
    "mission": "mission_1",
    "operationDate": 2023-11-13T00:00:00.000Z,
    "programName": "programme_1",
    "programNumber": 163,
    "provider": "fonjep",
    "regionAttachementComptable": "N/A",
    "uniqueId": "fonjep-S05543-2022-12-31-2023-10000000100018-163-N/A-N/A-2023-04-01-N/A-N/A",
    "updateDate": 2025-09-30T00:00:00.000Z,
  },
  {
    "actionCode": "N/A",
    "actionLabel": "N/A",
    "activityCode": "N/A",
    "activityLabel": "N/A",
    "amount": 888,
    "attachementComptable": "N/A",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000001",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000100018",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "centreFinancierCode": "N/A",
    "centreFinancierLibelle": "N/A",
    "ej": "N/A",
    "exerciceBudgetaire": 2023,
    "idVersement": "S05543-2022-12-31-2023-10000000100018",
    "ministry": "nom_ministere_1",
    "ministryAcronym": "sigle_ministere_1",
    "mission": "mission_1",
    "operationDate": 2023-11-13T00:00:00.000Z,
    "programName": "programme_1",
    "programNumber": 163,
    "provider": "fonjep",
    "regionAttachementComptable": "N/A",
    "uniqueId": "fonjep-S05543-2022-12-31-2023-10000000100018-163-N/A-N/A-2023-07-01-N/A-N/A",
    "updateDate": 2025-09-30T00:00:00.000Z,
  },
  {
    "actionCode": "N/A",
    "actionLabel": "N/A",
    "activityCode": "N/A",
    "activityLabel": "N/A",
    "amount": 889.5,
    "attachementComptable": "N/A",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000001",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000100018",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "centreFinancierCode": "N/A",
    "centreFinancierLibelle": "N/A",
    "ej": "N/A",
    "exerciceBudgetaire": 2023,
    "idVersement": "S05543-2022-12-31-2023-10000000100018",
    "ministry": "nom_ministere_1",
    "ministryAcronym": "sigle_ministere_1",
    "mission": "mission_1",
    "operationDate": 2023-11-13T00:00:00.000Z,
    "programName": "programme_1",
    "programNumber": 163,
    "provider": "fonjep",
    "regionAttachementComptable": "N/A",
    "uniqueId": "fonjep-S05543-2022-12-31-2023-10000000100018-163-N/A-N/A-2023-10-01-N/A-N/A",
    "updateDate": 2025-09-30T00:00:00.000Z,
  },
  {
    "actionCode": "N/A",
    "actionLabel": "N/A",
    "activityCode": "N/A",
    "activityLabel": "N/A",
    "amount": 888,
    "attachementComptable": "N/A",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000001",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000100018",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "centreFinancierCode": "N/A",
    "centreFinancierLibelle": "N/A",
    "ej": "N/A",
    "exerciceBudgetaire": 2024,
    "idVersement": "S05543-2022-12-31-2024-10000000100018",
    "ministry": "nom_ministere_1",
    "ministryAcronym": "sigle_ministere_1",
    "mission": "mission_1",
    "operationDate": 2024-03-12T00:00:00.000Z,
    "programName": "programme_1",
    "programNumber": 163,
    "provider": "fonjep",
    "regionAttachementComptable": "N/A",
    "uniqueId": "fonjep-S05543-2022-12-31-2024-10000000100018-163-N/A-N/A-2024-01-01-N/A-N/A",
    "updateDate": 2025-09-30T00:00:00.000Z,
  },
  {
    "actionCode": "N/A",
    "actionLabel": "N/A",
    "activityCode": "N/A",
    "activityLabel": "N/A",
    "amount": 888,
    "attachementComptable": "N/A",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000001",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000100018",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "centreFinancierCode": "N/A",
    "centreFinancierLibelle": "N/A",
    "ej": "N/A",
    "exerciceBudgetaire": 2024,
    "idVersement": "S05543-2022-12-31-2024-10000000100018",
    "ministry": "nom_ministere_1",
    "ministryAcronym": "sigle_ministere_1",
    "mission": "mission_1",
    "operationDate": 2024-04-23T00:00:00.000Z,
    "programName": "programme_1",
    "programNumber": 163,
    "provider": "fonjep",
    "regionAttachementComptable": "N/A",
    "uniqueId": "fonjep-S05543-2022-12-31-2024-10000000100018-163-N/A-N/A-2024-04-01-N/A-N/A",
    "updateDate": 2025-09-30T00:00:00.000Z,
  },
  {
    "actionCode": "N/A",
    "actionLabel": "N/A",
    "activityCode": "N/A",
    "activityLabel": "N/A",
    "amount": 888,
    "attachementComptable": "N/A",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000001",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000100018",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "centreFinancierCode": "N/A",
    "centreFinancierLibelle": "N/A",
    "ej": "N/A",
    "exerciceBudgetaire": 2024,
    "idVersement": "S05543-2022-12-31-2024-10000000100018",
    "ministry": "nom_ministere_1",
    "ministryAcronym": "sigle_ministere_1",
    "mission": "mission_1",
    "operationDate": 2024-07-11T00:00:00.000Z,
    "programName": "programme_1",
    "programNumber": 163,
    "provider": "fonjep",
    "regionAttachementComptable": "N/A",
    "uniqueId": "fonjep-S05543-2022-12-31-2024-10000000100018-163-N/A-N/A-2024-07-01-N/A-N/A",
    "updateDate": 2025-09-30T00:00:00.000Z,
  },
  {
    "actionCode": "N/A",
    "actionLabel": "N/A",
    "activityCode": "N/A",
    "activityLabel": "N/A",
    "amount": 889.5,
    "attachementComptable": "N/A",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000001",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000100018",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "centreFinancierCode": "N/A",
    "centreFinancierLibelle": "N/A",
    "ej": "N/A",
    "exerciceBudgetaire": 2024,
    "idVersement": "S05543-2022-12-31-2024-10000000100018",
    "ministry": "nom_ministere_1",
    "ministryAcronym": "sigle_ministere_1",
    "mission": "mission_1",
    "operationDate": 2024-10-17T00:00:00.000Z,
    "programName": "programme_1",
    "programNumber": 163,
    "provider": "fonjep",
    "regionAttachementComptable": "N/A",
    "uniqueId": "fonjep-S05543-2022-12-31-2024-10000000100018-163-N/A-N/A-2024-10-01-N/A-N/A",
    "updateDate": 2025-09-30T00:00:00.000Z,
  },
  {
    "actionCode": "N/A",
    "actionLabel": "N/A",
    "activityCode": "N/A",
    "activityLabel": "N/A",
    "amount": 888,
    "attachementComptable": "N/A",
    "beneficiaryCompanyId": Siren {
      "identifier": "100000001",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "10000000100018",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "centreFinancierCode": "N/A",
    "centreFinancierLibelle": "N/A",
    "ej": "N/A",
    "exerciceBudgetaire": 2025,
    "idVersement": "S05543-2022-12-31-2025-10000000100018",
    "ministry": "nom_ministere_1",
    "ministryAcronym": "sigle_ministere_1",
    "mission": "mission_1",
    "operationDate": 2025-02-06T00:00:00.000Z,
    "programName": "programme_1",
    "programNumber": 163,
    "provider": "fonjep",
    "regionAttachementComptable": "N/A",
    "uniqueId": "fonjep-S05543-2022-12-31-2025-10000000100018-163-N/A-N/A-2025-01-01-N/A-N/A",
    "updateDate": 2025-09-30T00:00:00.000Z,
  },
]
`;
